// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin-chart-piw Chart Donut with category and percentage labels / without legend 1`] = `
Object {
  "PieChartProps": Array [
    Object {
      "children": Array [
        false,
        <mockConstructor
          activeIndex={0}
          activeShape={[Function]}
          cx="50%"
          data={
            Array [
              Object {
                "AVG(efficiency)": 0.0566666666666667,
                "period": "2020",
              },
              Object {
                "AVG(efficiency)": 0.038,
                "period": "2018",
              },
              Object {
                "AVG(efficiency)": 0.0162068965517241,
                "period": "2019",
              },
              Object {
                "AVG(efficiency)": 0.0138888888888889,
                "period": "Total Period",
              },
              Object {
                "AVG(efficiency)": 0.011304347826087,
                "period": "2017",
              },
            ]
          }
          dataKey="AVG(efficiency)"
          innerRadius={80}
          label={false}
          onClick={[Function]}
          onMouseEnter={[Function]}
          outerRadius={100}
        >
          <Cell
            fill="#1f77b4"
          />
          <Cell
            fill="#ff7f0e"
          />
          <Cell
            fill="#2ca02c"
          />
          <Cell
            fill="#d62728"
          />
          <Cell
            fill="#9467bd"
          />
        </mockConstructor>,
      ],
      "height": 400,
      "width": 800,
    },
    Object {},
  ],
  "PieProps": Array [
    Object {
      "activeIndex": 0,
      "activeShape": [Function],
      "children": Array [
        <Cell
          fill="#1f77b4"
        />,
        <Cell
          fill="#ff7f0e"
        />,
        <Cell
          fill="#2ca02c"
        />,
        <Cell
          fill="#d62728"
        />,
        <Cell
          fill="#9467bd"
        />,
      ],
      "cx": "50%",
      "data": Array [
        Object {
          "AVG(efficiency)": 0.0566666666666667,
          "period": "2020",
        },
        Object {
          "AVG(efficiency)": 0.038,
          "period": "2018",
        },
        Object {
          "AVG(efficiency)": 0.0162068965517241,
          "period": "2019",
        },
        Object {
          "AVG(efficiency)": 0.0138888888888889,
          "period": "Total Period",
        },
        Object {
          "AVG(efficiency)": 0.011304347826087,
          "period": "2017",
        },
      ],
      "dataKey": "AVG(efficiency)",
      "innerRadius": 80,
      "label": false,
      "onClick": [Function],
      "onMouseEnter": [Function],
      "outerRadius": 100,
    },
    Object {},
  ],
}
`;

exports[`plugin-chart-piw Chart with legend left / without labels 1`] = `
Object {
  "LegendProps": Array [
    Object {
      "align": "left",
      "iconSize": 10,
      "iconType": "square",
      "layout": "vertical",
      "onClick": [Function],
      "payload": Array [
        Object {
          "color": "#1f77b4",
          "id": "2020",
          "payload": Object {
            "AVG(efficiency)": 0.0566666666666667,
            "period": "2020",
          },
          "type": "circle",
          "value": "2020",
        },
        Object {
          "color": "#ff7f0e",
          "id": "2018",
          "payload": Object {
            "AVG(efficiency)": 0.038,
            "period": "2018",
          },
          "type": "circle",
          "value": "2018",
        },
        Object {
          "color": "#2ca02c",
          "id": "2019",
          "payload": Object {
            "AVG(efficiency)": 0.0162068965517241,
            "period": "2019",
          },
          "type": "circle",
          "value": "2019",
        },
        Object {
          "color": "#d62728",
          "id": "Total Period",
          "payload": Object {
            "AVG(efficiency)": 0.0138888888888889,
            "period": "Total Period",
          },
          "type": "circle",
          "value": "Total Period",
        },
        Object {
          "color": "#9467bd",
          "id": "2017",
          "payload": Object {
            "AVG(efficiency)": 0.011304347826087,
            "period": "2017",
          },
          "type": "circle",
          "value": "2017",
        },
      ],
      "verticalAlign": "middle",
      "wrapperStyle": Object {
        "maxHeight": 400,
        "width": 0,
      },
    },
    Object {},
  ],
  "PieChartProps": Array [
    Object {
      "children": Array [
        <mockConstructor
          align="left"
          iconSize={10}
          iconType="square"
          layout="vertical"
          onClick={[Function]}
          payload={
            Array [
              Object {
                "color": "#1f77b4",
                "id": "2020",
                "payload": Object {
                  "AVG(efficiency)": 0.0566666666666667,
                  "period": "2020",
                },
                "type": "circle",
                "value": "2020",
              },
              Object {
                "color": "#ff7f0e",
                "id": "2018",
                "payload": Object {
                  "AVG(efficiency)": 0.038,
                  "period": "2018",
                },
                "type": "circle",
                "value": "2018",
              },
              Object {
                "color": "#2ca02c",
                "id": "2019",
                "payload": Object {
                  "AVG(efficiency)": 0.0162068965517241,
                  "period": "2019",
                },
                "type": "circle",
                "value": "2019",
              },
              Object {
                "color": "#d62728",
                "id": "Total Period",
                "payload": Object {
                  "AVG(efficiency)": 0.0138888888888889,
                  "period": "Total Period",
                },
                "type": "circle",
                "value": "Total Period",
              },
              Object {
                "color": "#9467bd",
                "id": "2017",
                "payload": Object {
                  "AVG(efficiency)": 0.011304347826087,
                  "period": "2017",
                },
                "type": "circle",
                "value": "2017",
              },
            ]
          }
          verticalAlign="middle"
          wrapperStyle={
            Object {
              "maxHeight": 400,
              "width": 0,
            }
          }
        />,
        false,
      ],
      "height": 400,
      "width": 800,
    },
    Object {},
  ],
  "PieProps": undefined,
}
`;

exports[`plugin-chart-piw Chart with legend top / percentage labels  1`] = `
Object {
  "LegendProps": Array [
    Object {
      "align": "center",
      "iconSize": 10,
      "iconType": "square",
      "layout": "horizontal",
      "onClick": [Function],
      "payload": Array [
        Object {
          "color": "#1f77b4",
          "id": "2020",
          "payload": Object {
            "AVG(efficiency)": 0.0566666666666667,
            "period": "2020",
          },
          "type": "circle",
          "value": "2020",
        },
        Object {
          "color": "#ff7f0e",
          "id": "2018",
          "payload": Object {
            "AVG(efficiency)": 0.038,
            "period": "2018",
          },
          "type": "circle",
          "value": "2018",
        },
        Object {
          "color": "#2ca02c",
          "id": "2019",
          "payload": Object {
            "AVG(efficiency)": 0.0162068965517241,
            "period": "2019",
          },
          "type": "circle",
          "value": "2019",
        },
        Object {
          "color": "#d62728",
          "id": "Total Period",
          "payload": Object {
            "AVG(efficiency)": 0.0138888888888889,
            "period": "Total Period",
          },
          "type": "circle",
          "value": "Total Period",
        },
        Object {
          "color": "#9467bd",
          "id": "2017",
          "payload": Object {
            "AVG(efficiency)": 0.011304347826087,
            "period": "2017",
          },
          "type": "circle",
          "value": "2017",
        },
      ],
      "verticalAlign": "top",
      "wrapperStyle": Object {
        "maxHeight": 400,
      },
    },
    Object {},
  ],
  "PieChartProps": Array [
    Object {
      "children": Array [
        <mockConstructor
          align="center"
          iconSize={10}
          iconType="square"
          layout="horizontal"
          onClick={[Function]}
          payload={
            Array [
              Object {
                "color": "#1f77b4",
                "id": "2020",
                "payload": Object {
                  "AVG(efficiency)": 0.0566666666666667,
                  "period": "2020",
                },
                "type": "circle",
                "value": "2020",
              },
              Object {
                "color": "#ff7f0e",
                "id": "2018",
                "payload": Object {
                  "AVG(efficiency)": 0.038,
                  "period": "2018",
                },
                "type": "circle",
                "value": "2018",
              },
              Object {
                "color": "#2ca02c",
                "id": "2019",
                "payload": Object {
                  "AVG(efficiency)": 0.0162068965517241,
                  "period": "2019",
                },
                "type": "circle",
                "value": "2019",
              },
              Object {
                "color": "#d62728",
                "id": "Total Period",
                "payload": Object {
                  "AVG(efficiency)": 0.0138888888888889,
                  "period": "Total Period",
                },
                "type": "circle",
                "value": "Total Period",
              },
              Object {
                "color": "#9467bd",
                "id": "2017",
                "payload": Object {
                  "AVG(efficiency)": 0.011304347826087,
                  "period": "2017",
                },
                "type": "circle",
                "value": "2017",
              },
            ]
          }
          verticalAlign="top"
          wrapperStyle={
            Object {
              "maxHeight": 400,
            }
          }
        />,
        <mockConstructor
          activeIndex={0}
          cx="50%"
          data={
            Array [
              Object {
                "AVG(efficiency)": 0.0566666666666667,
                "period": "2020",
              },
              Object {
                "AVG(efficiency)": 0.038,
                "period": "2018",
              },
              Object {
                "AVG(efficiency)": 0.0162068965517241,
                "period": "2019",
              },
              Object {
                "AVG(efficiency)": 0.0138888888888889,
                "period": "Total Period",
              },
              Object {
                "AVG(efficiency)": 0.011304347826087,
                "period": "2017",
              },
            ]
          }
          dataKey="AVG(efficiency)"
          label={[Function]}
          onClick={[Function]}
          outerRadius={100}
        >
          <Cell
            fill="#1f77b4"
          />
          <Cell
            fill="#ff7f0e"
          />
          <Cell
            fill="#2ca02c"
          />
          <Cell
            fill="#d62728"
          />
          <Cell
            fill="#9467bd"
          />
        </mockConstructor>,
      ],
      "height": 400,
      "width": 800,
    },
    Object {},
  ],
  "PieProps": Array [
    Object {
      "activeIndex": 0,
      "children": Array [
        <Cell
          fill="#1f77b4"
        />,
        <Cell
          fill="#ff7f0e"
        />,
        <Cell
          fill="#2ca02c"
        />,
        <Cell
          fill="#d62728"
        />,
        <Cell
          fill="#9467bd"
        />,
      ],
      "cx": "50%",
      "data": Array [
        Object {
          "AVG(efficiency)": 0.0566666666666667,
          "period": "2020",
        },
        Object {
          "AVG(efficiency)": 0.038,
          "period": "2018",
        },
        Object {
          "AVG(efficiency)": 0.0162068965517241,
          "period": "2019",
        },
        Object {
          "AVG(efficiency)": 0.0138888888888889,
          "period": "Total Period",
        },
        Object {
          "AVG(efficiency)": 0.011304347826087,
          "period": "2017",
        },
      ],
      "dataKey": "AVG(efficiency)",
      "label": [Function],
      "onClick": [Function],
      "outerRadius": 100,
    },
    Object {},
  ],
}
`;
